--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
                         Some other page
                     </a>
                     <a href="" class="navBar__item">
-                        More pages
+                        More pages to the god of pages
                     </a>
                     <a href="" class="navBar__item">
-                        Last page
+                        The last page
                     </a>
                 </div>
                 <div class="postsArea">
